--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
 - release_v1alpha1_build.yaml
+- release_v1alpha1_merge.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
