Add MR and Tag when finish

--- a/config/crd/bases/release.salt.x5.ru_merges.yaml
+++ b/config/crd/bases/release.salt.x5.ru_merges.yaml
@@ -130,6 +130,10 @@ spec:
                 type: array
               failureMessage:
                 type: string
+              finalMR:
+                type: string
+              finalTag:
+                type: string
               hasConflict:
                 type: boolean
               projectPID:
