Add auto accept for final MR

--- a/config/crd/bases/release.salt.x5.ru_builds.yaml
+++ b/config/crd/bases/release.salt.x5.ru_builds.yaml
@@ -44,6 +44,8 @@ spec:
                     URL:
                       pattern: ^(https?:\/\/)?([\da-z\.-]+)\.([a-z\.]{2,6})\/([\/\w\.-]){1,}\/?$
                       type: string
+                    acceptFinalMR:
+                      type: boolean
                     branches:
                       items:
                         properties:
